Updated the site front-end

--- a/Events.html
+++ b/Events.html
@@ -46,7 +46,7 @@
 				<div class="header-wrapper">
 					<div class="clearfix">
 						<!-- Logo -->
-						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6 style="color: white;"><b>The Rails Coding Shop</b></h6></div>
+						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6 style="color: white;"><b>The Rails Shop</b></h6></div>
 
 						<!-- ============================ Theme Menu ========================= -->
 						<nav class="theme-main-menu float-right navbar" id="mega-menu-wrapper">
@@ -92,7 +92,7 @@
 				Theme Inner Banner 
 			============================================== 
 			-->
-			<div class="inner-page-banner" style="height: 200px;">
+			<div class="inner-page-banner" style="height: 460px; background-image: url('images/6.jpg');" >
 				<div class="opacity">
 					<h1>Events</h1>
 
@@ -106,7 +106,7 @@
 				Our Team Style One 
 			============================================== 
 			-->
-			<div class="our-team-styleOne inner-page">
+			<div class="our-team-styleOne inner-page" style="margin-top: -23%;">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-4 col-xs-6">
