--- a/OurCurriculum.html
+++ b/OurCurriculum.html
@@ -47,7 +47,7 @@
 				<div class="header-wrapper">
 					<div class="clearfix">
 						<!-- Logo -->
-						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6 style="color: white;"><b>The Rails Coding Shop</b></h6></div>
+						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6 style="color: white;"><b>The Rails Shop</b></h6></div>
 
 						<!-- ============================ Theme Menu ========================= -->
 						<nav class="theme-main-menu float-right navbar" id="mega-menu-wrapper">
@@ -93,7 +93,7 @@
 				Theme Inner Banner 
 			============================================== 
 			-->
-			<div class="inner-page-banner" style="padding-bottom: -13px; margin-bottom: -4%;">
+			<div class="inner-page-banner" style="padding-bottom: -13px; margin-bottom: -4%; background-image: url('images/7.jpg');">
 				<div class="opacity">
 					<h1>Our Curriculum</h1>
 					
@@ -145,16 +145,43 @@
 							</div> <!-- /.single-block -->
 						</div> <!-- /.col- -->
 
-						<p style="color: black; padding: 20px 0px 20px 0px;">Our robust curriculum is designed to make you think, work and tackle challenges like a professional software engineer. You will gain marketable skills by building fully functioning web applications, use real tools (no in-browser fluff) and take on an apprentice role to build an algorithmically driven web application like it is done in the real world; as part of an agile team.</p>
+						<p style="color: black; padding: 20px 0px 20px 0px; margin-bottom: 2%;">Our robust curriculum is designed to make you think, work and tackle challenges like a professional software engineer. You will gain marketable skills by building fully functioning web applications, use real tools (no in-browser fluff) and take on an apprentice role to build an algorithmically driven web application like it is done in the real world; as part of an agile team.</p>
 
 						<h5 style="margin-bottom: 5%;">During the program you'll:</h5>
+
+						<div style="text-align: left; color: black; line-height: 35px; list-style-type: ;">
+
+						<div class="col-sm-6">
+				        <ul>
+				          <li>> Build and launch fully-functional web applications</li>
+				          <li>> Build an advanced web application like it is done in the real world, as part of an agile team</li>
+				          <!--<li></li>-->
+				        </ul>
+				      </div>
+
+				      <div class="col-sm-6">
+				          <ul>
+				            <li>> Create a sophisticated coding portfolio on GitHub</li>
+				            <li>> Apply and understand MVC architecture, Object Oriented Programming, inheritance and test driven development</li>
+				            <!--<li></li>-->
+				          </ul>
+				        </div>
+				      </div>
+
+				      <h5 style="margin-top: 25%;">The best support, at the right time, to help you grow</h5>
+				      <p style="color: black; padding: 20px 10% 20px 10%; margin-top: 1%;">Learning from your own mistakes is what makes you the best developer. We're here to help you learn those crucial lessons, fast - often within minutes - show you what you did wrong and how you can improve further. By giving you a network of friendly experts that you can depend on, you can focus on what matters most: reaching your professional goal.</p>
+
+				      <h5 style="margin-top: 5%;">Custom Help When You Need it Most</h5>
+				      <p style="color: black; padding: 20px 10% 20px 10%; margin-top: 1%;">Weekly pair-programming sessions with your personal senior software engineering mentor. Designed to challenge and built to elevate your coding skills to the next level.</p>
+
+				      <h5 style="margin-top: 5%;">1-on-1 Mentor Sessions</h5>
+				      <p style="color: black; padding: 20px 10% 20px 10%; margin-top: 1%;">Everyone makes mistakes and gets stuck. We get it. That's why we're never further away than a simple click. Say hello to our friendly Firehose Support and goodbye to endless internet searches.</p>
+
 					</div> <!-- /.row -->
 				</div> <!-- /.container -->
 			</div> <!-- /.what-we-do -->
 
-			<p>
-				
-			</p>
+			<center style="margin-bottom: 70px;"><a href="TheRailsShopCurriculum.pdf" class="wow fadeInUp animated p-bg-color btn-cta" data-wow-delay="0.3s">Download our Curriculum</a></center>
 			
 
 
@@ -170,7 +197,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-12">
 							<div class="footer-logo">
 								<a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
-								<h5><a href="#" class="tran3s">gulluinc@gmail.com</a></h5>
+								<h5><a href="#" class="tran3s">info@therailsshop.club</a></h5>
 								<h6 class="p-color">202. 277. 3894</h6>
 							</div>
 						</div>
