--- a/about-us.html
+++ b/about-us.html
@@ -46,7 +46,7 @@
 				<div class="header-wrapper">
 					<div class="clearfix">
 						<!-- Logo -->
-						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6 style="color: white;"><b>The Rails Coding Shop</b></h6></div>
+						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6 style="color: white;"><b>The Rails Shop</b></h6></div>
 
 						<!-- ============================ Theme Menu ========================= -->
 						<nav class="theme-main-menu float-right navbar" id="mega-menu-wrapper">
