--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
 				<div class="header-wrapper">
 					<div class="clearfix">
 						<!-- Logo -->
-						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6 style="color: white;"><b>The Rails Coding Shop</b></h6></div>
+						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6 style="color: white;"><b>The Rails Shop</b></h6></div>
 
 						<!-- ============================ Theme Menu ========================= -->
 						<nav class="theme-main-menu float-right navbar" id="mega-menu-wrapper">
@@ -91,14 +91,13 @@
 				Theme Inner Banner 
 			============================================== 
 			-->
-			<div class="inner-page-banner">
+			<div class="inner-page-banner" style="background-image: url('images/blog-header.jpg');">
 				<div class="opacity" style="padding-bottom: 38px;">
-					<h1>You just have to <br> wing it before you<br> kill it.</h1>
-					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li>/</li>
-						<li>Blog</li>
-					</ul>
+					<h1>You just have to  wing it<br> before you kill it.</h1>
+					<br><br>
+					<p style="color: white; line-height: 26px;">“Successful people are really, really good at making things up as they go. They excel <br>at reacting to reality, rather than working within the confines of a rigid plan.”
+— Ken Mazaika
+</p>
 				</div> <!-- /.opacity -->
 			</div> <!-- /inner-page-banner -->
 
@@ -114,30 +113,30 @@
 					<div class="row">
 					<div class="wrapper col-md-10">
 						<div class="single-blog">
-							<div class="image"><img src="images/blog/17.jpg" alt=""></div>
+							<div class="image"><img src="images/blog/21.jpg" alt=""></div>
 							<div class="text">
-								<h6>Rashed Ka.</h6>
-								<h5><a href="blog-details.html" class="tran3s">Challange yourself to win the future</a></h5>
-								<p>Their testimonial videos aren't production quality, but they get the message across, cover useful and relevant information which goes to show you don't need to invest thousands product.</p>
-								<a href="blog-details.html" class="tran3s"><i class="flaticon-arrows" aria-hidden="true"></i></a>
+								<h6>Alex Shyaka</h6>
+								<h5><a class="tran3s">OVERCOMING THE IMPOSTOR SYNDROME</a></h5>
+								<p>Per Wikipedia Impostor syndrome (also known as impostor phenomenon or fraud syndrome) is a concept describing high-achieving individuals who are marked by...</p>
+								<a href="blog-details.html" class="tran3s">read more</a>
 							</div>
 						</div> <!-- /.single-blog -->
 						<div class="single-blog">
 							<div class="image"><img src="images/blog/19.jpg" alt=""></div>
 							<div class="text">
-								<h6>Rashed Ka.</h6>
-								<h5><a href="blog-details.html" class="tran3s">Challange yourself to win the future</a></h5>
-								<p>Their testimonial videos aren't production quality, but they get the message across, cover useful and relevant information which goes to show you don't need to invest thousands product.</p>
-								<a href="blog-details.html" class="tran3s"><i class="flaticon-arrows" aria-hidden="true"></i></a>
+								<h6>Alex Shyaka</h6>
+								<h5><a class="tran3s">HOW TO TELL A NOT SO WORTH IT CLIENT</a></h5>
+								<p>As a professional and a business man or woman you come across all manner of clients and you are constantly reminded that customer is king so you tread carefu...</p>
+								<a href="blog-details.html" class="tran3s">read more</a>
 							</div>
 						</div> <!-- /.single-blog -->
 						<div class="single-blog">
-							<div class="image"><img src="images/blog/19.jpg" alt=""></div>
+							<div class="image"><img src="images/blog/20.jpg" alt=""></div>
 							<div class="text">
-								<h6>Rashed Ka.</h6>
-								<h5><a href="blog-details.html" class="tran3s">Challange yourself to win the future</a></h5>
-								<p>Their testimonial videos aren't production quality, but they get the message across, cover useful and relevant information which goes to show you don't need to invest thousands product.</p>
-								<a href="blog-details.html" class="tran3s"><i class="flaticon-arrows" aria-hidden="true"></i></a>
+								<h6>Alex Shyaka</h6>
+								<h5><a class="tran3s">DON’T GET STUCK IN “THE ADVANCED BEGINNER STAGE”.</a></h5>
+								<p>I love to learn new things especially when they are technology related, I always like to be informed and keep on top of the game. This could be for a couple ...</p>
+								<a href="blog-details.html" class="tran3s">read more</a>
 							</div>
 						</div> <!-- /.single-blog -->
 
@@ -151,23 +150,23 @@
 								<h5>Recent Posts</h5>
 								<hr>
 
-								<p>The Rails Shop Grand opening</p>
-								<p>The Day we launched</p>
-								<p>Why We are on this earth</p>
-								<p>Values</p>
+								<p>Overcoming the imposter syndrome</p><br>
+								<p>How to tell a not so worth it client</p><br>
+								<p>DON’T GET STUCK IN “THE ADVANCED BEGINNER STAGE”.</p>
+
 
 
 							</div>
 						</div>
 
-						<div style="margin-top: 20%;">
+						<!--<div style="margin-top: 20%;">
 							<ul class="page-pagination">
 						<li class="active"><a href="#" class="tran3s">1</a></li>
 						<li><a href="#" class="tran3s">2</a></li>
 						<li><a href="#" class="tran3s">3</a></li>
 						<li><a href="#" class="tran3s">Next</a></li>
 					</ul>	
-						</div>
+						</div>-->
 					
 				  </div><!-- /.row -->
 				</div> <!-- /.container -->
