--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="header-wrapper">
 					<div class="clearfix">
 						<!-- Logo -->
-						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6>The Rails Coding Shop</h6></div>
+						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6>The Rails Shop</h6></div>
 
 						<!-- ============================ Theme Menu ========================= -->
 						<nav class="theme-main-menu float-right navbar" id="mega-menu-wrapper">
@@ -157,7 +157,7 @@
 										<use xlink:href="#shape-one" />
 									</clipPath>
 									<g clip-path="url(#shape-one)">
-										<image width="778" height="576" href="images/blog/16.jpg" class="banner-img-one">
+										<image width="778" height="576" href="images/blog/20.jpg" class="banner-img-one">
 										</image>
 									</g>
 								</svg>
@@ -176,7 +176,7 @@
 				What We Do
 			============================================== 
 			-->
-			<div class="what-we-do">
+			<div class="what-we-do" style="padding-bottom: 10px;">
 				<div class="container">
 					<h3>"Learning to build a mordern web application is daunting. Ruby on Rails makes it much easier and more fun" <br>	<i style="font-size: 28px;">	-The Rails Shop</i></h3>
 
@@ -270,7 +270,7 @@
 				Course Features
 			============================================== 
 			-->
-			<div class="home-service-section">
+			<div class="home-service-section" style="margin-top: -120px;">
 				<div class="container">
 					<div class="col-md-9 col-md-offset-3 main-container">
 						<div class="theme-title">
