--- a/OurCurriculum.html
+++ b/OurCurriculum.html
@@ -21,6 +21,7 @@
 		<!-- responsive style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- Fix Internet Explorer ______________________________________-->
 
@@ -191,14 +192,14 @@
 				Footer
 			============================================== 
 			-->
-			<footer class="bg-two">
+			<footer class="bg-one">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-3 col-sm-6 col-xs-12">
 							<div class="footer-logo">
 								<a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
 								<h5><a href="#" class="tran3s">info@therailsshop.club</a></h5>
-								<h6 class="p-color">202. 277. 3894</h6>
+								<h6 class="p-color">+256752969844</h6>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-12 footer-list">
@@ -222,26 +223,26 @@
 							</ul>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-12 footer-subscribe">
-							<h4>Subscribe Us</h4>
+							<h4>Subscribe to our mailing list</h4>
 							<form action="#">
 								<input type="text" placeholder="Enter your mail">
 							</form>
 							<ul>
-								<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i>facebook</a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
+								
 							</ul>
 						</div>
 					</div> <!-- /.row -->
 
 					<div class="bottom-footer clearfix">
 						<ul class="float-right">
-							<li><h3><span class="timer p-color" data-from="0" data-to="8997" data-speed="5000" data-refresh-interval="50">0</span> Products</h3></li>
-							<li><h3><span class="timer p-color" data-from="0" data-to="53701" data-speed="5000" data-refresh-interval="50">0</span> Members</h3></li>
+							<li><h3><span class="timer p-color" data-from="0" data-to="213" data-speed="5000" data-refresh-interval="50">0</span> Students</h3></li>
+							<li><h3><span class="timer p-color" data-from="0" data-to="20" data-speed="5000" data-refresh-interval="50">0</span> Tutors</h3></li>
 							<li><h3><span class="timer p-color" data-from="0" data-to="1110" data-speed="5000" data-refresh-interval="50">0</span> Shops</h3></li>
 						</ul>
-						<p class="float-left">&copy; 2017 <a href="#" class="tran3s p-color">CreativeGigs</a>. All rights reserved</p>
+						<p class="float-left">&copy; 2018 <a href="#" class="tran3s p-color">The Rails Shop</a>. Created with <i class="fa fa-heart"></i> by <a href="http://www.samhez.com"  target="_blank">Samuel Epodoi</a></p>
 					</div>
 				</div> <!-- /.container -->
 			</footer>
