--- a/about-us.html
+++ b/about-us.html
@@ -21,6 +21,8 @@
 		<!-- responsive style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 		<!-- Fix Internet Explorer ______________________________________-->
 
@@ -113,7 +115,7 @@
 				<div class="container">
 					<div class="title">
 						<h6>WELCOME TO The Rails Shop</h6>
-						<h2>We’r a dynamic team of creatives people <br>innovation &amp; Marketing Expert.</h2>
+						<h2>We are a web development shop for <br>full stack developers. Rails is our forte!.</h2>
 					</div>
 					<img src="images/inner-page/1.jpg" alt="">
 					<div class="about-tab-wrapper clearfix">
@@ -244,7 +246,7 @@
 										<ul class="tran3s">
 											<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 											<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-											<li><a href="#" class="tran3s"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+											<li><a href="#" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 											<li><a href="#" class="tran3s"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
 										</ul>
 									</div>
@@ -307,9 +309,9 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-6 col-xs-12">
 							<div class="footer-logo">
-								<a href="index.html"><h6><b>The Rails Shop </b></h6></a>
+								<a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
 								<h5><a href="#" class="tran3s">info@therailsshop.club</a></h5>
-								<h6 class="p-color">077. 277. 3894</h6>
+								<h6 class="p-color">+256752969844</h6>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-12 footer-list">
@@ -338,10 +340,10 @@
 								<input type="text" placeholder="Enter your mail">
 							</form>
 							<ul>
-								<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i>facebook</a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
+								
 							</ul>
 						</div>
 					</div> <!-- /.row -->
@@ -352,7 +354,7 @@
 							<li><h3><span class="timer p-color" data-from="0" data-to="20" data-speed="5000" data-refresh-interval="50">0</span> Tutors</h3></li>
 							<li><h3><span class="timer p-color" data-from="0" data-to="1110" data-speed="5000" data-refresh-interval="50">0</span> Shops</h3></li>
 						</ul>
-						<p class="float-left">&copy; 2018 <a href="#" class="tran3s p-color">The Rails Shop</a>. Created with <i class="fa fa-heart"></i> by Samuel Epodoi</p>
+						<p class="float-left">&copy; 2018 <a href="#" class="tran3s p-color">The Rails Shop</a>. Created with <i class="fa fa-heart"></i> by <a href="http://www.samhez.com"  target="_blank">Samuel Epodoi</a></p>
 					</div>
 				</div> <!-- /.container -->
 			</footer>
