--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,8 @@
 		<!-- responsive style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 		<!-- Fix Internet Explorer ______________________________________-->
 
@@ -117,8 +119,21 @@
 							<div class="text">
 								<h6>Alex Shyaka</h6>
 								<h5><a class="tran3s">OVERCOMING THE IMPOSTOR SYNDROME</a></h5>
-								<p>Per Wikipedia Impostor syndrome (also known as impostor phenomenon or fraud syndrome) is a concept describing high-achieving individuals who are marked by...</p>
-								<a href="blog-details.html" class="tran3s">read more</a>
+								
+								<span class="more">
+									<p>Per Wikipedia Impostor syndrome (also known as impostor phenomenon or fraud syndrome) is a concept describing high-achieving individuals who are marked by an inability to internalise their accomplishments and a persistent fear of being exposed as a “fraud”.
+
+Even when you feel like you have prepared enough, it keeps creeping in and eventually fades away as you take on more projects and deliver better experiences for your clients.
+
+Apprehension is not a weakness, it is an indication that you are willing to get out of your comfort zone. Appreciate it and keep moving forward.
+
+Like any other bad feeling, it all starts with being aware of what is happening and then appreciating that it a normal feeling that will eventually go away. For a lot of people, it can be a show stopper because it makes you feel inadequate and not good enough for the job. A lot of people have failed to pursue their dreams fully because of this phenomenon.
+
+Overcoming the syndrome is for sure a challenge but not one which is insurmountable. I have felt it and pretty much everyone who is invested in not just producing work but producing good work feels it at some point in their career.
+
+One way of overcoming my blogger impostor syndrome is to write at least one short article a week and this is one of those. So, I implore you to not stop pursuing your dreams and aspirations. Appreciate the fear and the apprehension and just get on with it.</p>
+								</span>
+								<!--<a href="javascript:showMore()" class="tran3s" id="link">read more</a>-->
 							</div>
 						</div> <!-- /.single-blog -->
 						<div class="single-blog">
@@ -126,8 +141,8 @@
 							<div class="text">
 								<h6>Alex Shyaka</h6>
 								<h5><a class="tran3s">HOW TO TELL A NOT SO WORTH IT CLIENT</a></h5>
-								<p>As a professional and a business man or woman you come across all manner of clients and you are constantly reminded that customer is king so you tread carefu...</p>
-								<a href="blog-details.html" class="tran3s">read more</a>
+								<p>As a professional and a business man or woman you come across all manner of clients and you are constantly reminded that customer is king so you tread carefully. I’m a strong believer in offering more than you are expected to offer because I believe business thrives on good referrals.</p>
+								<!--<a class="tran3s">read more</a>-->
 							</div>
 						</div> <!-- /.single-blog -->
 						<div class="single-blog">
@@ -135,8 +150,8 @@
 							<div class="text">
 								<h6>Alex Shyaka</h6>
 								<h5><a class="tran3s">DON’T GET STUCK IN “THE ADVANCED BEGINNER STAGE”.</a></h5>
-								<p>I love to learn new things especially when they are technology related, I always like to be informed and keep on top of the game. This could be for a couple ...</p>
-								<a href="blog-details.html" class="tran3s">read more</a>
+								<p>I love to learn new things especially when they are technology related, I always like to be informed and keep on top of the game. This could be for a couple of reasons, sometimes it could be the desire to want to sound intelligent when with peers or even to professionally keep abreast of things. </p>
+								<!--<a class="tran3s">read more</a>-->
 							</div>
 						</div> <!-- /.single-blog -->
 
@@ -180,14 +195,14 @@
 				Footer
 			============================================== 
 			-->
-			<footer class="bg-two">
+			<footer class="bg-one">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-3 col-sm-6 col-xs-12">
 							<div class="footer-logo">
-								<a href="index-2.html"><img src="images/logo/logo.png" alt="Logo"></a>
-								<h5><a href="#" class="tran3s">gulluinc@gmail.com</a></h5>
-								<h6 class="p-color">202. 277. 3894</h6>
+								<a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
+								<h5><a href="#" class="tran3s">info@therailsshop.club</a></h5>
+								<h6 class="p-color">+256752969844</h6>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-12 footer-list">
@@ -211,26 +226,26 @@
 							</ul>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-12 footer-subscribe">
-							<h4>Subscribe Us</h4>
+							<h4>Subscribe to our mailing list</h4>
 							<form action="#">
 								<input type="text" placeholder="Enter your mail">
 							</form>
 							<ul>
-								<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i>facebook</a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
+								
 							</ul>
 						</div>
 					</div> <!-- /.row -->
 
 					<div class="bottom-footer clearfix">
 						<ul class="float-right">
-							<li><h3><span class="timer p-color" data-from="0" data-to="8997" data-speed="5000" data-refresh-interval="50">0</span> Products</h3></li>
-							<li><h3><span class="timer p-color" data-from="0" data-to="53701" data-speed="5000" data-refresh-interval="50">0</span> Members</h3></li>
+							<li><h3><span class="timer p-color" data-from="0" data-to="213" data-speed="5000" data-refresh-interval="50">0</span> Students</h3></li>
+							<li><h3><span class="timer p-color" data-from="0" data-to="20" data-speed="5000" data-refresh-interval="50">0</span> Tutors</h3></li>
 							<li><h3><span class="timer p-color" data-from="0" data-to="1110" data-speed="5000" data-refresh-interval="50">0</span> Shops</h3></li>
 						</ul>
-						<p class="float-left">&copy; 2017 <a href="#" class="tran3s p-color">CreativeGigs</a>. All rights reserved</p>
+						<p class="float-left">&copy; 2018 <a href="#" class="tran3s p-color">The Rails Shop</a>. Created with <i class="fa fa-heart"></i> by <a href="http://www.samhez.com"  target="_blank">Samuel Epodoi</a></p>
 					</div>
 				</div> <!-- /.container -->
 			</footer>
