--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,8 @@
 		<!-- responsive style sheet -->
 		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 
+		<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 		<!-- Fix Internet Explorer ______________________________________-->
 
@@ -110,7 +112,7 @@
 				Contact Us
 			============================================== 
 			-->
-			<div class="contact-us">
+			<div class="contact-us" style="margin-top: -8%;">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-7 col-md-6 col-xs-12">
@@ -131,7 +133,7 @@
 								<ul>
 									<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
 									<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-									<li><a href="#" class="tran3s"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+									<li><a href="#" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 									<li><a href="#" class="tran3s"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 								</ul>
 							</div> <!-- /.contact-address -->
@@ -163,6 +165,7 @@
 			<!-- Google Map _______________________ -->
 			<div id="google-map-area">
 				<div class="google-map" id="contact-google-map" data-map-lat="40.925372" data-map-lng="-74.276544" data-map-title="Find Map" data-map-zoom="12"></div>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7435939573456!2d32.61303961461343!3d0.3506700997441607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xdedbf508f023288a!2sThe+Innovation+Village+Kampala!5e0!3m2!1sen!2sug!4v1522337424670" width="1180" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	   		 </div>
 			
 			
@@ -179,9 +182,9 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-6 col-xs-12">
 							<div class="footer-logo">
-								<a href="index.html"><h6><b>The Rails Shop </b></h6></a>
+								<a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
 								<h5><a href="#" class="tran3s">info@therailsshop.club</a></h5>
-								<h6 class="p-color">077. 277. 3894</h6>
+								<h6 class="p-color">+256752969844</h6>
 							</div>
 						</div>
 						<div class="col-md-3 col-sm-6 col-xs-12 footer-list">
@@ -210,10 +213,10 @@
 								<input type="text" placeholder="Enter your mail">
 							</form>
 							<ul>
-								<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i>facebook</a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
+								
 							</ul>
 						</div>
 					</div> <!-- /.row -->
@@ -224,7 +227,7 @@
 							<li><h3><span class="timer p-color" data-from="0" data-to="20" data-speed="5000" data-refresh-interval="50">0</span> Tutors</h3></li>
 							<li><h3><span class="timer p-color" data-from="0" data-to="1110" data-speed="5000" data-refresh-interval="50">0</span> Shops</h3></li>
 						</ul>
-						<p class="float-left">&copy; 2018 <a href="#" class="tran3s p-color">The Rails Shop</a>. Created with <i class="fa fa-heart"></i> by Samuel Epodoi</p>
+						<p class="float-left">&copy; 2018 <a href="#" class="tran3s p-color">The Rails Shop</a>. Created with <i class="fa fa-heart"></i> by <a href="http://www.samhez.com"  target="_blank">Samuel Epodoi</a></p>
 					</div>
 				</div> <!-- /.container -->
 			</footer>
