--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
 		<link rel="stylesheet" type="text/css" href="css/flaticon.css">
 
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
 
 
 
@@ -52,7 +56,7 @@
 				<div class="header-wrapper">
 					<div class="clearfix">
 						<!-- Logo -->
-						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6>The Rails Shop</h6></div>
+						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6><b>The Rails Shop</b></h6></div>
 
 						<!-- ============================ Theme Menu ========================= -->
 						<nav class="theme-main-menu float-right navbar" id="mega-menu-wrapper">
@@ -262,6 +266,24 @@
 
 									</div> <!-- /.wrapper -->
 								</div> <!-- /.item -->
+
+								<div class="item">
+									<div class="wrapper">
+										<h4>Code Hobbyists</h4>
+										<p>Any company knows the education &amp; training of their employees is key to a thriving team. Depending on the type of company you work for, if you understand how to code, and can develop CMS driven websites, that gives you negotiating power for a better position, or a higher salary.</p>
+
+									</div> <!-- /.wrapper -->
+								</div> <!-- /.item -->
+
+								<div class="item">
+									<div class="wrapper">
+										<h4>People Looking for a New Career</h4>
+										<p>Are you out of work? Looking for a more rewarding job? Desire a career that can allow you to work almost anywhere in the world? Becoming a Web Developer might be the answer for you. <br>
+
+Web developers are paid well, anywhere from $33,000 to more than $105,000 per year. They get to work at amazing companies that are changing the world, or they enjoy the ability to start their own companies, become location-independent and work from home, from coffee shops, in an airplane, on the beach, or wherever they want!</p>
+
+									</div> <!-- /.wrapper -->
+								</div> <!-- /.item -->
 							</div> <!-- /.testimonial-slider -->
 						</div> <!-- /.main-container -->
 					</div> <!-- /.container -->
@@ -415,7 +437,7 @@
 					<div class="row">
 						<div class="col-md-3 col-sm-6 col-xs-12">
 							<div class="footer-logo">
-								<a href="index.html"><h6><b>The Rails Shop </b></h6></a>
+								<a href="index.html"><img src="images/logo/logo.png" alt="Logo"></a>
 								<h5><a href="#" class="tran3s">info@therailsshop.club</a></h5>
 								<h6 class="p-color">+256752969844</h6>
 							</div>
@@ -448,8 +470,8 @@
 							<ul>
 								<li><a href="#" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i>facebook</a></li>
 								<li><a href="#" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-dribbble" aria-hidden="true"></i>Dribble</a></li>
-								<li><a href="#" class="tran3s"><i class="fa fa-google-plus" aria-hidden="true"></i>Google-Plus</a></li>
+								<li><a href="#" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
+								
 							</ul>
 						</div>
 					</div> <!-- /.row -->
@@ -460,7 +482,7 @@
 							<li><h3><span class="timer p-color" data-from="0" data-to="20" data-speed="5000" data-refresh-interval="50">0</span> Tutors</h3></li>
 							<li><h3><span class="timer p-color" data-from="0" data-to="1110" data-speed="5000" data-refresh-interval="50">0</span> Shops</h3></li>
 						</ul>
-						<p class="float-left">&copy; 2018 <a href="#" class="tran3s p-color">The Rails Shop</a>. Created with <i class="fa fa-heart"></i> by Samuel Epodoi</p>
+						<p class="float-left">&copy; 2018 <a href="#" class="tran3s p-color">The Rails Shop</a>. Created with <i class="fa fa-heart"></i> by <a href="http://www.samhez.com"  target="_blank">Samuel Epodoi</a></p>
 					</div>
 				</div> <!-- /.container -->
 			</footer>
@@ -538,7 +560,7 @@
 		<!-- Query Loader -->
 		<script src="vendor/queryloader/queryLoader3.js" type="text/javascript"></script>
 
-		
+
 
 		<!-- Theme js -->
 		<script type="text/javascript" src="js/theme.js"></script>
