Removed the words on the social media handles.

--- a/about-us.html
+++ b/about-us.html
@@ -166,7 +166,7 @@
 								<div class="wrapper">
 									<p>I found Alex to be a great trainer, and a very inspiring person. It's clear he is very passionate about helping designers learn to code, and I look forward to more courses from him! </p>
 									<div class="name clearfix">
-										<img src="images/home/3.jpg" alt="">
+										<img src="images/ssuubi.jpg" alt="">
 										<h5>Ssubi</h5>
 										<span>graduate of Build a Website from Scratch with HTML &amp; CSS</span>
 									</div>
@@ -176,7 +176,7 @@
 								<div class="wrapper">
 									<p>Alex is amazing and I honestly think he's the best tutor of all the courses I have taken before. Will definitely be following him in the future. </p>
 									<div class="name clearfix">
-										<img src="images/home/4.jpg" alt="">
+										<img src="images/jesse.png" alt="">
 										<h5>Jesse</h5>
 										<span>graduate of Bootstrap &amp; Ruby on Rails framework</span>
 									</div>
@@ -325,9 +325,9 @@
 								<input type="text" placeholder="Enter your mail">
 							</form>
 							<ul>
-								<li><a href="https://www.facebook.com/TheRailsShop/" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i>facebook</a></li>
-								<li><a href="https://twitter.com/therailsshop" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></li>
-								<li><a href="https://www.instagram.com/therailsshop/" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
+								<li><a href="https://www.facebook.com/TheRailsShop/" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+								<li><a href="https://twitter.com/therailsshop" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.instagram.com/therailsshop/" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 								
 							</ul>
 						</div>
