--- a/contact.html
+++ b/contact.html
@@ -212,9 +212,9 @@
 								<input type="text" placeholder="Enter your mail">
 							</form>
 							<ul>
-								<li><a href="https://www.facebook.com/TheRailsShop/" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i>facebook</a></li>
-								<li><a href="https://twitter.com/therailsshop" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></li>
-								<li><a href="https://www.instagram.com/therailsshop/" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
+								<li><a href="https://www.facebook.com/TheRailsShop/" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+								<li><a href="https://twitter.com/therailsshop" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.instagram.com/therailsshop/" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 								
 							</ul>
 						</div>
