--- a/index.html
+++ b/index.html
@@ -464,9 +464,9 @@ Web developers are paid well, anywhere from $33,000 to more than $105,000 per ye
 								<input type="text" placeholder="Enter your mail">
 							</form>
 							<ul>
-								<li><a href="https://www.facebook.com/TheRailsShop/" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i>facebook</a></li>
-								<li><a href="https://twitter.com/therailsshop" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></li>
-								<li><a href="https://www.instagram.com/therailsshop/" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i>Instagram</a></li>
+								<li><a href="https://www.facebook.com/TheRailsShop/" class="tran3s"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+								<li><a href="https://twitter.com/therailsshop" class="tran3s"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+								<li><a href="https://www.instagram.com/therailsshop/" class="tran3s"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
 								
 							</ul>
 						</div>
