Added logo to nav-bar

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<!-- Font Awesome -->
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		
+
 
 
 
@@ -59,7 +59,7 @@
 				<div class="header-wrapper">
 					<div class="clearfix">
 						<!-- Logo -->
-						<div class="float-left "><!--<img src="images/logo/logo.png" alt="Logo">--><h6><b>The Rails Shop</b></h6></div>
+						<div class="float-left "><img src="images/logo/logo.png" alt="The Rails Shop" style="max-height: 50px; margin-top: -10px;"></div>
 
 						<!-- ============================ Theme Menu ========================= -->
 						<nav class="theme-main-menu float-right navbar" id="mega-menu-wrapper">
@@ -75,24 +75,24 @@
 						   <!-- Collect the nav links, forms, and other content for toggling -->
 						   <div class="collapse navbar-collapse" id="navbar-collapse-1">
 								<ul class="nav">
-									<li class="dropdown-holder menu-list active"><a href="index.html" class="tran3s">Home</a>
+									<li class=" menu-list active"><a href="index.html" class="tran3s" style="font-size: 15px;" >Home</a>
 
 									</li>
-									<li class="dropdown-holder menu-list"><a href="about-us.html" class="tran3s">About</a>
+									<li class=" menu-list"><a href="about-us.html" class="tran3s" style="font-size: 15px;" >About</a>
 
 									</li>
-									<li class="dropdown-holder menu-list"><a href="OurCurriculum.html" class="tran3s">Our Curriculum</a>
+									<li class=" menu-list"><a href="OurCurriculum.html" class="tran3s" style="font-size: 15px;" >Our Curriculum</a>
 
 									</li>
-									<li class="dropdown-holder menu-list"><a href="Events.html" class="tran3s">Events</a>
+									<li class=" menu-list"><a href="Events.html" class="tran3s" style="font-size: 15px;" >Events</a>
 
 									</li>
 
-									<li class="dropdown-holder menu-list"><a href="service-v1.html" class="tran3s">Resources</a>
+									<li class="menu-list"><a href="service-v1.html" class="tran3s" style="font-size: 15px;" >Resources</a>
 
 									</li>
-									<li class="menu-list"><a href="contact.html" class="tran3s">Contact Us</a></li>
-									<li class="login-button"><a href="blog.html">Blog</a></li>
+									<li class="menu-list"><a href="contact.html" class="tran3s" style="font-size: 15px;" >Contact Us</a></li>
+									<li class="login-button"><a href="blog.html" style="font-size: 15px;" >Blog</a></li>
 								</ul>
 						   </div><!-- /.navbar-collapse -->
 						</nav> <!-- /.theme-main-menu -->
@@ -318,7 +318,7 @@ Web developers are paid well, anywhere from $33,000 to more than $105,000 per ye
 							</li>
 							<li class="col-md-6">
 								<div>
-									<i class="flaticon-movie-symbol-of-video-camera"></i>
+									<i class="fa fa-desktop"></i>
 									<h5><a href="service-v1.html" class="tran3s">10+ hours of HD video content</a></h5>
 									<p>This content is well curated to take you through all the content that is covered in class
                   .You will own it for personal use after the course.</p>
